--- a/index.html
+++ b/index.html
@@ -232,7 +232,21 @@
               </div>
             </div>
           </div>
-        </div>             
+        </div>
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/MacMillan.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Friday 26th September 10:00 AM to 12:00 noon</h5>
+                <p class="card-text">Please join us for this Macmillan Coffee Morning event.</p>
+              </div>
+            </div>
+          </div>
+        </div>                      
         
         <div class="card mb-3">
           <div class="row g-0">
