--- a/index.html
+++ b/index.html
@@ -295,6 +295,20 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
+              <img src="img/PetService.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Sunday 5th October 6:00 PM (Pet Service)</h5>
+                <p class="card-text">Everyone and their pets are welcome to the popular annual Pet Service!</p>
+              </div>
+            </div>
+          </div>
+        </div>         
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
               <img src="img/EveryoneWelcome.jpg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
@@ -351,13 +365,29 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
+              <img src="img/CraftFair.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday 29th October Time TBA - Craft Fair</h5>
+                <p class="card-text">Further details to follow...</p>
+              </div>
+            </div>
+          </div>
+        </div>        
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
               <img src="img/Joy2025.jpg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Advent and Christmas Dates</h5>
                 <p class="card-text">
-                  TBA PM - Advent Carol Service<br/>
+                  30th November TBA PM - Advent Carol Service<br/>
+                  7th December 3:15 PM - Messy Church Christingle Service<br/>
+                  14th December 3:00 PM - Outdoor Nativity Play<br/>
                   21st December 6:30 PM - Service of Nine Lessons and Carols<br/>
                   24th December 11:30 PM - Midnight Eucharist<br/>
                   25th December 10:15 AM - Christmas Morning Service<br/>
