--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Wednesday 29th November Time 10:30 AM - 2:30 PM - Craft Fair</h5>
+                <h5 class="card-title">Wednesday 29th November 10:30 AM - 2:30 PM - Craft Fair</h5>
                 <p class="card-text">Further details to follow...</p>
               </div>
             </div>
