--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 31st August 10:15 AM (Parish Eucharist)</h5>
+                <h5 class="card-title">Sunday 31st August 10:15 AM (Parish Eucharist, Eleventh Sunday after Trinity)</h5>
                 <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
