--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/EveryoneWelcome.jpg" class="img-fluid rounded" alt="image">
+              <img src="img/HolyCrossDayStHelen.jpg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 14th September 10:15 AM (Parish Eurcharist)</h5>
+                <h5 class="card-title">Sunday 14th September 10:15 AM (Parish Eurcharist - Holy Cross Day)</h5>
                 <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
