--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 14th September 10:15 AM (Parish Eurcharist - Holy Cross Day)</h5>
+                <h5 class="card-title">Sunday 14th September 10:15 AM (Parish Eucharist - Holy Cross Day)</h5>
                 <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
@@ -283,7 +283,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 12th October 10:15 AM (Parish Eurcharist)</h5>
+                <h5 class="card-title">Sunday 12th October 10:15 AM (Parish Eucharist)</h5>
                 <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
