--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 7th September 10:15 AM (All Age)</h5>
+                <h5 class="card-title">Sunday 7th September 10:15 AM (All Age Service in Celebration of Children)</h5>
                 <p class="card-text">This service has a more relaxed style and content, suitable for the whole family.</p>
               </div>
             </div>
