--- a/index.html
+++ b/index.html
@@ -188,6 +188,20 @@
             </div>
           </div>
         </div> 
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/ChristmasLights.jpeg" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Saturday 22rd November 6:00 PM - Carol Singing / Welton Christmas lights</h5>
+                <p class="card-text">Please join us singing Christmas carols around the tree, as the Parish Council turns on the Christmas lights in Welton.</p>
+              </div>
+            </div>
+          </div>
+        </div>         
         
         <div class="card mb-3">
           <div class="row g-0">
@@ -224,7 +238,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 30th November 10:15 AM - Parish Eucharist</h5>
+                <h5 class="card-title">Sunday 30th November 10:15 AM - Advent Sunday - Parish Eucharist</h5>
                 <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
@@ -266,12 +280,12 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 7th December 3:15 PM - Messy Church Christingle Service</h5>
+                <h5 class="card-title">Sunday 7th December 3:15 PM - Messy Church does Christingle</h5>
                 <p class="card-text">Please join us as we celebrate Jesus as the Light of the world. The Christingle service aims to spread a message of hope, love, and joy by visually representing Christian beliefs and bringing families and communities together.</p>
               </div>
             </div>
           </div>
-        </div>
+        </div>      
 
         <div class="card mb-3">
           <div class="row g-0">
@@ -323,7 +337,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Sunday 21st December 6:30 PM - Service of Nine Lessons and Carols</h5>
-                <p class="card-text">Please join us for this traditional service of nine lessons and carols.  This service is a Christmas service with roots in the Anglican Church, first devised in 1880. It features nine Bible readings that tell the story from The Fall to the birth of Jesus Christ, interspersed with traditional carols and hymns, sung by both the choir and the congregation.</p>
+                <p class="card-text">Please join us for this traditional service of nine lessons and carols.  This service is a Christmas service with roots in the Anglican Church, first devised in 1880. It features nine Bible readings that tell the story from The Fall to the birth of Jesus Christ, interspersed with traditional carols and hymns, sung by both the choir and the congregation. After the service, please stay for festive drinks and mince pies.</p>
               </div>
             </div>
           </div>
